--- a/Project Hashtag/Pages/ProfileSettings.cshtml
+++ b/Project Hashtag/Pages/ProfileSettings.cshtml
@@ -28,7 +28,7 @@
 		</aside>
 		<div class="rightBio">
 			<form method="post" enctype="multipart/form-data">
-				<input type="file" name="photo">
+				<input type="file" name="photo" required>
 				<button type="submit">Update picture</button>
 			</form>
 		</div>
