post  method for fetcing and various

--- a/Project Hashtag/Pages/Index.cshtml
+++ b/Project Hashtag/Pages/Index.cshtml
@@ -101,7 +101,7 @@ else
 
 
 
-        <li id="@post.ID" class="@classType animatePost @(i < 2 ? "showing" : "")">
+        <li id="@post.ID" class="@classType animatePost @(i < 2 ? "showing" : "")" data-tag="@post.Tag">
 
             @if (Model.TimeLineMode)
             {
