target blank on links

--- a/Project Hashtag/Pages/Shared/_Layout.cshtml
+++ b/Project Hashtag/Pages/Shared/_Layout.cshtml
@@ -86,16 +86,16 @@
         <p>School project made by: </p>
         <ul>
             <li>
-                <a href="https://www.linkedin.com/in/rickard-thunborg-472596242/">Rickard Thunborg</a>
+                <a target="_blank" href="https://www.linkedin.com/in/rickard-thunborg-472596242/">Rickard Thunborg</a>
             </li>
             <li>
-                <a href="https://www.linkedin.com/in/alex-grundell/">Alex Grundell</a>
+                <a target="_blank" href="https://www.linkedin.com/in/alex-grundell/">Alex Grundell</a>
             </li>
             <li>
-                <a>Gustav Mårtensson</a>
+                <a target="_blank">Gustav Mårtensson</a>
             </li>
             <li>
-                <a>Oliver Talcoth</a>
+                <a target="_blank">Oliver Talcoth</a>
             </li>
         </ul>
     </footer>
