--- a/Project Hashtag/Pages/Index.cshtml
+++ b/Project Hashtag/Pages/Index.cshtml
@@ -181,6 +181,7 @@ else
                     <img src="@post.PictureUrl" alt="Error loading picture" />
                 </div>
             }
+            <a id="adSpace"></a>
             <div class="interaction">
                 <form method="post" asp-page-handler="like" asp-route-id="@post.ID">
                     @if (Model.TimeLineMode)
