--- a/Project Hashtag/wwwroot/css/site.css
+++ b/Project Hashtag/wwwroot/css/site.css
@@ -678,6 +678,7 @@ Below is flow styling
     width: 74%;
     margin: auto;
     margin-bottom: 1em;
+    word-wrap: break-word;
 }
 
 .interaction {
