ads on all pages

--- a/Project Hashtag/Pages/Index.cshtml
+++ b/Project Hashtag/Pages/Index.cshtml
@@ -181,7 +181,7 @@ else
                     <img src="@post.PictureUrl" alt="Error loading picture" />
                 </div>
             }
-            <a id="adSpace"></a>
+            <a id="adSpace" target="_blank"></a>
             <div class="interaction">
                 <form method="post" asp-page-handler="like" asp-route-id="@post.ID">
                     @if (Model.TimeLineMode)
