--- a/Project Hashtag/Pages/Profile.cshtml
+++ b/Project Hashtag/Pages/Profile.cshtml
@@ -189,9 +189,9 @@
 
             @if (Model.User.ID == Model.LoggedIn.LoggedInAccountID)
             {
-                <form method="post" asp-page-handler="delete" asp-route-postID="@post.ID">
+                <form method="post" asp-page-handler="delete" asp-route-postID="@post.ID" id="deletePost">
                     <input hidden name="userId" value="@Model.User.ID">
-                    <button type="submit" id="deleteButton">Delete</button>
+                    <button type="submit">Delete</button>
                 </form>
             }
 
