--- a/Project Hashtag/Pages/Post.cshtml
+++ b/Project Hashtag/Pages/Post.cshtml
@@ -142,6 +142,7 @@
 
         @if (Model.User.ID == Model.LoggedIn.LoggedInAccountID)
         {
+            <div class="spacerPost"></div>
             <form method="post" asp-page-handler="delete" asp-route-id="@Model.Post.ID" id="deletePost">
                 <input hidden name="userId" value="@Model.User.ID">
                 <button type="submit">Delete</button>
