--- a/Project Hashtag/Pages/Profile.cshtml
+++ b/Project Hashtag/Pages/Profile.cshtml
@@ -190,8 +190,8 @@
             @if (Model.User.ID == Model.LoggedIn.LoggedInAccountID)
             {
                 <div class="spacerPost"></div>
-                <form method="post" asp-page-handler="delete" asp-route-postID="@post.ID" id="deletePost">
-                    <input hidden name="userId" value="@Model.User.ID">
+                <form method="post" asp-page-handler="Delete" asp-route-postID="@post.ID" id="deletePost">
+                    <input hidden name="userID" value="@Model.User.ID">
                     <button type="submit">Delete</button>
                 </form>
             }
